--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@ just like this <strong>p</strong> tag and its contents.</p>
 <img src=”octopus.jpg” alt=”A draw of an octopus”>
 </body>
 <footer>
+<p>Company: My Octopus Company</p>
+<p><a href="mailto:semi@devenv.com">semi@devenv.com</a></p>
 </footer>
 </html>
