conflicts in main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <p>This is an example paragraph. 
+THIS IF FOR A CONFLICT IN MAIN
 Anything in the <strong>body</strong> tag will appear on the page,
 just like this <strong>p</strong> tag and its contents.</p>
 <img src=”octopus.jpg” alt=”A draw of an octopus”>
